bk_ida/gccida/g0/parse_identifier
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/cpplex.c:879:1: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cpp_hashnode_0 * parse_identifier( cpp_reader_0 *pfile) 
^~~~~~~~~~~~~~
cpp_hashnode
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/cpplex.c:879:36: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_hashnode_0 * parse_identifier( cpp_reader_0 *pfile) 
                                   ^~~~~~~~~~~~
                                   cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/cpplex.c:882:1: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cpp_hashnode_0 *result; // [rsp+28h] [rbp-8h] 
^~~~~~~~~~~~~~
cpp_hashnode
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/cpplex.c:884:35: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
for ( cur = pfile->buffer->cur; ( sch_istable[*cur] & 0x204) != 0; ++cur ) 
                                  ^~~~~~~~~~~
                                  _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/cpplex.c:892:28: error: expected expression
result = ( cpp_hashnode_0 *)ht_lookup( 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/cpplex.c:892:12: error: use of undeclared identifier 'cpp_hashnode_0'
result = ( cpp_hashnode_0 *)ht_lookup( 
           ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_identifier/src/obj/cpplex.o] Error 1
